<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="it.polimi.guardian.authorityapp.TakeAJobActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/bg_main"
        android:scaleType="centerCrop"
        tools:ignore="ContentDescription"
        />

    <TextView
        android:id="@+id/tv_jobs_list"
        android:text="@string/jobs_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_huge"
        android:layout_centerHorizontal="true"/>
    <LinearLayout
        android:id="@+id/ln_btn_holder"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_jobs_list"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_refresh"
            android:layout_below="@id/tv_jobs_list"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/refresh"
            style="@style/home_button_rounded_overlay_tall"
            />
        <Button
            android:id="@+id/btn_return_job"
            android:layout_below="@id/tv_jobs_list"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/return_job"
            style="@style/home_button_rounded_overlay_tall"
            />
        </LinearLayout>
    <ListView
        android:id="@+id/list_of_jobs"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ln_btn_holder"
        android:divider="#b5b5b5"
        android:dividerHeight="1dp"
        android:listSelector="@drawable/list_selector" />
    <TextView
        android:id="@+id/tv_list_is_empty"
        android:text="@string/list_is_empty"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:textSize="25sp"
        android:gravity="center_vertical|center_horizontal"    />

</RelativeLayout>
